All config objects are now contained within a config service.

--- a/src/SVIBEL.Core.Common/SVIBEL.Core.Common.csproj
+++ b/src/SVIBEL.Core.Common/SVIBEL.Core.Common.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\ConsoleLogger.cs" />
     <Compile Include="Service\SelfStartingServiceContainer.cs" />
+    <Compile Include="Config\IConfigService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Config\" />
