--- a/src/SVIBEL.Core.Models/SVIBEL.Core.Models.csproj
+++ b/src/SVIBEL.Core.Models/SVIBEL.Core.Models.csproj
@@ -34,6 +34,8 @@
     <Compile Include="Messaging\MessagingConfig.cs" />
     <Compile Include="Messaging\UpdateRequestBase.cs" />
     <Compile Include="Messaging\ConfigCacheBase.cs" />
+    <Compile Include="SearchResult.cs" />
+    <Compile Include="ServerBaseConfig.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
