--- a/src/SVIBEL.Core.Persistance/SVIBEL.Core.Persistance.csproj
+++ b/src/SVIBEL.Core.Persistance/SVIBEL.Core.Persistance.csproj
@@ -17,6 +17,9 @@
     <PackageReference Include="NETStandard.Library">
       <Version>1.6.1</Version>
     </PackageReference>
+    <PackageReference Include="MongoDB.Driver">
+      <Version>2.4.0</Version>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -24,13 +27,17 @@
       <Project>{1140A6AB-62BD-41E3-AF7A-50208EA18614}</Project>
       <Name>SVIBEL.Core.Models</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SVIBEL.Core.Common\SVIBEL.Core.Common.csproj">
-      <Project>{00D7DB03-3F7F-41F7-95C9-FD6589E8F110}</Project>
-      <Name>SVIBEL.Core.Common</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SVIBEL.Core.Messaging\SVIBEL.Core.Messaging.csproj">
       <Project>{B7EE590D-C37C-4F00-A18A-9DC9EA2702D8}</Project>
       <Name>SVIBEL.Core.Messaging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SVIBEL.Core.Config\SVIBEL.Core.Config.csproj">
+      <Project>{9A04765D-487F-439B-9697-DEADC3809206}</Project>
+      <Name>SVIBEL.Core.Config</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SVIBEL.Core.Common\SVIBEL.Core.Common.csproj">
+      <Project>{00D7DB03-3F7F-41F7-95C9-FD6589E8F110}</Project>
+      <Name>SVIBEL.Core.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\SVIBEL.Core.AuthenticationClient\SVIBEL.Core.AuthenticationClient.csproj">
       <Project>{C98BB250-3746-497D-9EA4-DCCEB029BFBD}</Project>
@@ -38,11 +45,21 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PersistedConfigClientBase.cs" />
-    <Compile Include="ConfigClientBase.cs" />
-    <Compile Include="StaticConfigClient.cs" />
-    <Compile Include="ConfigBuildParams.cs" />
-    <Compile Include="ConfigServiceBase.cs" />
+    <Compile Include="IDataContext.cs" />
+    <Compile Include="PersistanceServiceBase.cs" />
+    <Compile Include="DataEnricherBase.cs" />
+    <Compile Include="Cache\CacheRequestHandlerBase.cs" />
+    <Compile Include="DataProviderBackedProcessor.cs" />
+    <Compile Include="Cache\CacheRequestProcessorBase.cs" />
+    <Compile Include="Persistance\MessagePersistor.cs" />
+    <Compile Include="Persistance\CRUDMessagPersistor.cs" />
+    <Compile Include="Mongo\MongoContext.cs" />
+    <Compile Include="TopicLocator.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Cache\" />
+    <Folder Include="Persistance\" />
+    <Folder Include="Mongo\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
