--- a/src/SVIBEL.Core.Common/SVIBEL.Core.Common.csproj
+++ b/src/SVIBEL.Core.Common/SVIBEL.Core.Common.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Logging\ConsoleLogger.cs" />
     <Compile Include="Service\SelfStartingServiceContainer.cs" />
     <Compile Include="Config\IConfigService.cs" />
+    <Compile Include="TopicLocator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Config\" />
