--- a/src/SVIBEL.Core.Messaging/SVIBEL.Core.Messaging.csproj
+++ b/src/SVIBEL.Core.Messaging/SVIBEL.Core.Messaging.csproj
@@ -26,20 +26,21 @@
     <Compile Include="RabbitMQMessageBroker.cs" />
     <Compile Include="MessageBrokerFactory.cs" />
     <Compile Include="RabbitLogger.cs" />
+    <Compile Include="AttributeBasedConventions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SVIBEL.Core.AuthenticationClient\SVIBEL.Core.AuthenticationClient.csproj">
-      <Project>{C98BB250-3746-497D-9EA4-DCCEB029BFBD}</Project>
+      <Project>{55BEF098-C8C2-47B0-B18A-44C9E9EB5D62}</Project>
       <Name>SVIBEL.Core.AuthenticationClient</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\SVIBEL.Core.Common\SVIBEL.Core.Common.csproj">
-      <Project>{00D7DB03-3F7F-41F7-95C9-FD6589E8F110}</Project>
+      <Project>{3F1EC159-4DD7-4FE5-8F8B-FC25221115C4}</Project>
       <Name>SVIBEL.Core.Common</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\SVIBEL.Core.Models\SVIBEL.Core.Models.csproj">
-      <Project>{1140A6AB-62BD-41E3-AF7A-50208EA18614}</Project>
+      <Project>{08BA18D0-7853-41FA-8088-7E8762F8E8C0}</Project>
       <Name>SVIBEL.Core.Models</Name>
       <Private>False</Private>
     </ProjectReference>
