--- a/src/SVIBEL.Core.ConsoleHarness/SVIBEL.Core.ConsoleHarness.Mac.csproj
+++ b/src/SVIBEL.Core.ConsoleHarness/SVIBEL.Core.ConsoleHarness.Mac.csproj
@@ -9,6 +9,11 @@
   <ItemGroup>
     <Compile Include="**\*.cs" />
     <EmbeddedResource Include="**\*.resx" />
+    <Compile Remove="Persistance\CacheRequestProcessor.cs" />
+    <Compile Remove="Persistance\PersistanceRequestProcessor.cs" />
+    <Compile Remove="Authentication\TestAuthClient.cs" />
+    <Compile Remove="Entities\ServerConfig.cs" />
+    <Compile Remove="TestAppConfigClient.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +23,12 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.App">
       <Version>1.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="MongoDB.Driver">
+      <Version>2.4.1</Version>
+    </PackageReference>
+    <PackageReference Include="EasyNetQ">
+      <Version>2.0.4-netcore1432</Version>
     </PackageReference>
   </ItemGroup>
 
@@ -42,6 +53,20 @@
       <Project>{1140A6AB-62BD-41E3-AF7A-50208EA18614}</Project>
       <Name>SVIBEL.Core.Models</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SVIBEL.Core.Persistance\SVIBEL.Core.Persistance.csproj">
+      <Project>{A158A7E6-F2A4-49B4-953F-309C3D3CB80C}</Project>
+      <Name>SVIBEL.Core.Persistance</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ComponentHosts\" />
+    <Folder Include="Persistance\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Services\" />
+    <Folder Include="Persistance\Cache\" />
+    <Folder Include="Persistance\Persistance\" />
+    <Folder Include="Messages\" />
+    <Folder Include="Authentication\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
