--- a/src/SVIBEL.Core.AuthenticationClient/SVIBEL.Core.AuthenticationClient.csproj
+++ b/src/SVIBEL.Core.AuthenticationClient/SVIBEL.Core.AuthenticationClient.csproj
@@ -1,14 +1,11 @@
 ﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />
-
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <EmbeddedResource Include="**\*.resx" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk">
       <Version>1.0.0-alpha-20161104-2</Version>
@@ -21,7 +18,6 @@
       <Version>3.6.0</Version>
     </PackageReference>
   </ItemGroup>
-
   <ItemGroup>
     <Compile Include="AuthClientFactory.cs" />
     <Compile Include="DummyAuthClient.cs" />
@@ -34,6 +30,7 @@
       <Project>{3F1EC159-4DD7-4FE5-8F8B-FC25221115C4}</Project>
       <Name>SVIBEL.Core.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SVIBEL.Core.Models\SVIBEL.Core.Models.csproj" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
