--- a/src/SVIBEL.Core.Persistance/SVIBEL.Core.Persistance.csproj
+++ b/src/SVIBEL.Core.Persistance/SVIBEL.Core.Persistance.csproj
@@ -1,14 +1,11 @@
 ﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />
-
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <EmbeddedResource Include="**\*.resx" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk">
       <Version>1.0.0-alpha-20161104-2</Version>
@@ -21,8 +18,8 @@
       <Version>2.4.0</Version>
     </PackageReference>
   </ItemGroup>
-
   <ItemGroup>
+    <ProjectReference Include="..\SVIBEL.Core.AuthenticationClient\SVIBEL.Core.AuthenticationClient.csproj" />
     <ProjectReference Include="..\SVIBEL.Core.Models\SVIBEL.Core.Models.csproj">
       <Project>{08BA18D0-7853-41FA-8088-7E8762F8E8C0}</Project>
       <Name>SVIBEL.Core.Models</Name>
